--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
+    "@types/node": "20.14.9",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "5.5.2"
   }
 }
