--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.2",
+    "d3-force": "^3.0.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "react": "^18",
