--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3-force": "^3.0.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
+    "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
     "reactflow": "^11.11.4"
