--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "20.14.9",
