--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.2",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
     "d3-force": "^3.0.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
