--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "d3-force": "^3.0.0",
+    "elkjs": "^0.9.3",
     "framer-motion": "^11.3.17",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
